[package]
name = "neo-chat-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.65"
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }

tokio = "1.34.0"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
bincode = "2.0.0-rc.3"
